Version: 1.8.4
Date: dd Month yyyy
  Bugfixes:
    - Removed fake module slots in the dredger platofrm showing up in Extended Descriptions (#17, thanks Dimava)
    - Fixed dredge platorm being deconstrucable via decon. planner (#18, thanks Dimava)
  Compatibility:
    - Added support for Picker Dollies
---------------------------------------------------------------------------------------------------
Version: 1.8.3
Date: 8 December 2023
  Compatibility:
    - [BZ] When BZ-tin is enable, recipes with lead will not be reverted to iron
    - [K2] Added setting to enable/disable lead ingredients in early ammos
    - [K2] Reduced stack sizes of tech cards/research data
    - [PF] Added compatibility with Brim Stuff, Lasing Around, and Them Thar Hills by Planetfall
    - [RSC] Fixed rocket silo stage 1 not advancing in its own progress
---------------------------------------------------------------------------------------------------
Version: 1.8.2
Date: 9 November 2023
  Bugfixes:
    - Actually fixed crash on load with MSI2
---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 8 November 2023
  Features:
    - Added map rechart on migration to reveal rocket silo holes in already-mapped chunks
  Bugfixes:
    - Fixed crash when updating to 1.8.0 with MSI2
    - Fixed crash on load with VeryBZ or BZ Basic Metals
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 3 November 2023
  Features:
    - Rocket silos can now only be placed in naturally occuring rocket silo holes
    - Rockets now require "Rocket frames" to construct, crafted from titansteel, low density structures, and lubricant
    - Added water condensing recipe for getting rid of excess steam
    - Added tips and tricks pages explaining vehicle fuel restrictions and new rocket silo mechanics
    - Added logistics requests to combat aircraft
  Changes: