@@ -21,6 +21,7 @@
     "? FreightForwardingPack",
     "? Milestones",
     "? aai-vehicles-ironclad",
+    "? better-victory-screen > 0.2.3",
     "(?) big-mining-drill",
     "(?) bzaluminum",
     "(?) bzgold",
