@@ -161,3 +161,6 @@ ff-power=There is no way to transfer electricity over oceans using electric pole
 ff-fuel=Some vehicles have unique fuel requirements.\n\nCars, tanks, ships and aircraft accept all regular fuel types: [item=wood] [item=coal] [item=solid-fuel] [item=rocket-fuel] [item=nuclear-fuel]\n[entity=mini-locomotive] accepts only basic fuel types: [item=wood] [item=coal] [item=solid-fuel]\n[entity=locomotive] accepts only batteries: [item=ff-charged-battery] [item=ff-charged-battery-pack] and outputs used batteries which must be removed and recharged. Batteries have a small chance of breaking during charging).
 ff-dredging=Dredging platforms can be placed over seamounts.\nDredging for [item=ff-ferrous-nodule] and [item=ff-cupric-nodule] allows infinite production of [item=iron-ore], [item=copper-ore], and [item=stone], to supplement regular resource production.\nDredging for [item=ff-cobalt-crust] allows infinite production of [item=ff-cobalt-ore], which doesn't spawn elsewhere.\nNodules and crusts have low stack sizes and cannot be loaded into containers, so processing them into ores on the dredging platform itself is recommended.\n\nUnderground belts cannot be placed on dredging platforms.
 ff-rocket-silo=Rocket silos can only be placed on naturally occuring rocket silo holes.\nYou must launch several [item=satellite] in order to research the [item=ff-interstellar-communicator] necessary to win the game.
+
+[bvs-stats]
+containers=Containers created
